--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=Thermometer
-spring.mvc.view.prefix= /WEB-INF/jsp/
-spring.mvc.view.suffix= .jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/Thermometer?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.messages.basename=validation
+spring.jpa.hibernate.ddl-auto=update
