--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+			<version>3.2.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
