--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,11 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 			<version>3.2.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>6.2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
