--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>6.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+			<version>3.2.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
